fixed (about) on small device 375px

--- a/assets/css/templatemo-572-designer.css
+++ b/assets/css/templatemo-572-designer.css
@@ -64,7 +64,7 @@ ul li {
   display: inline-block;
 }
 
-p {
+p, #text-beside-gif {
   font-size: 15px;
   line-height: 28px;
   color: #7a7a7a;
@@ -75,6 +75,13 @@ p {
     line-height: 1.5;
     font-weight: 500;
     color: #7a7a7a;
+  }
+  #text-beside-gif{
+    font-size: 13px;
+    line-height: 1.5;
+    font-weight: 500;
+    color: #7a7a7a;
+    margin-top: -8rem;
   }
 }
 #about-banner-p {
@@ -87,6 +94,7 @@ p {
     font-size: 15px;
     line-height: 28px;
     color: var(--clr-neutral-100);
+    margin-top: 3rem;
   }
 }
 button.main-button {
@@ -203,7 +211,7 @@ margin-top: 2em;
 
 @media (max-width: 380px) {
   .section-heading h2 {
-    font-size: 27px;
+    font-size: 24px;
     line-height: 38px;
     text-transform: uppercase;
     letter-spacing: auto;
